@@ -1,3 +1,0 @@
-const mongoose = require('mongoose')
-mongoose.connect('mongodb://localhost:27017/e-come')
-
